--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -1,18 +1,18 @@
-name: "TODO"
-on: ["push"]
+name: 'TODO'
+on: ['push']
 jobs:
   build:
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     steps:
-      - uses: "actions/checkout@master"
-      - name: "todo-to-issue"
-        uses: "senecajs/todo-to-issue-action@master"
+      - uses: 'actions/checkout@master'
+      - name: 'todo-to-issue'
+        uses: 'senecajs/todo-to-issue-action@master'
         with:
           REPO: ${{ github.repository }}
           BEFORE: ${{ github.event.before }}
           SHA: ${{ github.sha }}
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LABEL: "TODO:"
-          COMMENT_MARKER: "//"
-          INCLUDE_EXT: ".js,.md,.ts"
-        id: "todo"
+          LABEL: 'TODO:'
+          COMMENT_MARKER: '//'
+          INCLUDE_EXT: '.js,.md,.ts'
+        id: 'todo'
