--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "@seneca/tangocard-provider",
-  "version": "1.0.0",
-  "main": "dist/tangocard-provider.js",
+  "name": "@seneca/stripe-provider",
+  "version": "0.0.1",
+  "main": "dist/stripe-provider.js",
   "type": "commonjs",
-  "types": "dist/tangocard-provider.d.ts",
-  "description": "Seneca entity provider for the Tangocard API.",
-  "homepage": "https://github.com/senecajs/seneca-tangocard-provider",
+  "types": "dist/stripe-provider.d.ts",
+  "description": "Seneca entity provider for the Stripe API.",
+  "homepage": "https://github.com/senecajs/seneca-stripe-provider",
   "keywords": [
     "seneca",
-    "tangocard",
-    "tangocard-provider"
+    "stripe",
+    "stripe-provider"
   ],
-  "author": "Richard Rodger - richardrodger.com",
+  "author": "Leonardo Cunha - leonardocunha.com",
   "repository": {
     "type": "git",
-    "url": "git://github.com/senecajs/seneca-tangocard-provider.git"
+    "url": "git://github.com/senecajs/seneca-stripe-provider.git"
   },
   "scripts": {
-    "test": "jest --coverage",
-    "test-nocov": "jest --coverage",
-    "test-some": "jest -t",
-    "test-watch": "jest --coverage --watchAll",
-    "watch": "tsc -w -d",
-    "build": "tsc -d",
-    "doc": "echo seneca-doc -p @seneca/provider FIX-broken",
-    "clean": "rm -rf node_modules dist yarn.lock package-lock.json",
-    "reset": "npm run clean && npm i && npm test",
+    "prettier": "prettier --write .",
+    "test": "node --enable-source-maps --test \"dist-test/**/*.test.js\"",
+    "test-some": "node --enable-source-maps --test-name-pattern=\"$TEST_PATTERN\" --test \"dist-test/**/*.test.js\"",
+    "watch": "tsc --build src test -w",
+    "build": "tsc --build src test",
+    "doc": "seneca-doc",
+    "clean": "rm -rf dist dist-test node_modules yarn.lock package-lock.json",
+    "reset": "npm run clean && npm i && npm run build && npm test",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
     "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
     "repo-publish-quick": "npm run build && npm run test && npm run doc && npm run repo-tag && npm publish --access public --registry https://registry.npmjs.org "
@@ -37,30 +36,26 @@
     "LICENSE"
   ],
   "engines": {
-    "node": ">=14"
-  },
-  "dependencies": {
-  },
-  "peerDependencies": {
-    "@seneca/env": ">=0.2",
-    "@seneca/provider": ">=1.0",
-    "seneca": ">=3",
-    "seneca-entity": ">=19",
-    "seneca-promisify": ">=3"
+    "node": ">=22"
   },
   "devDependencies": {
-    "@seneca/doc": "^4.1.0",
-    "@seneca/env": ">=0.2",
-    "@seneca/provider": ">=1.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.13.0",
-    "esbuild": "^0.17.7",
-    "es-jest": "^2.1.0",
-    "jest": "^29.4.2",
-    "seneca": ">=3",
-    "seneca-entity": ">=19",
-    "seneca-msg-test": "^3.4.0",
-    "seneca-promisify": ">=3",
-    "typescript": "^4.9.5"
+    "@hapi/code": "^9.0.3",
+    "@seneca/doc": "^8.0.0",
+    "@seneca/maintain": "^0.1.0",
+    "@types/node": "^25.2.3",
+    "gubu": "^9.0.0",
+    "prettier": "3.8.1",
+    "seneca-msg-test": "^4.1.0",
+    "typescript": "^5.9.3"
+  },
+  "peerDependencies": {
+    "@seneca/entity-util": ">=3",
+    "gubu": ">=9",
+    "seneca": ">=3||>=4.0.0-rc2",
+    "seneca-entity": ">=26",
+    "seneca-promisify": ">=3"
+  },
+  "dependencies": {
+    "stripe": "^20.3.1"
   }
 }
