--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@seneca/stripe-provider",
   "version": "0.0.1",
-  "main": "dist/stripe-provider.js",
+  "main": "dist/StripeProvider.js",
   "type": "commonjs",
-  "types": "dist/stripe-provider.d.ts",
+  "types": "dist/StripeProvider.d.ts",
   "description": "Seneca entity provider for the Stripe API.",
   "homepage": "https://github.com/senecajs/seneca-stripe-provider",
   "keywords": [
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@hapi/code": "^9.0.3",
     "@seneca/doc": "^8.0.0",
+    "@seneca/env": "^0.5.0",
     "@seneca/maintain": "^0.1.0",
     "@types/node": "^25.2.3",
     "gubu": "^9.0.0",
@@ -53,7 +54,8 @@
     "gubu": ">=9",
     "seneca": ">=3||>=4.0.0-rc2",
     "seneca-entity": ">=26",
-    "seneca-promisify": ">=3"
+    "seneca-promisify": ">=3",
+    "@seneca/env": ">=0.5"
   },
   "dependencies": {
     "stripe": "^20.3.1"
