feat: add stripe credentials on plugin prepare

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@seneca/doc": "^8.0.0",
     "@seneca/env": "^0.5.0",
     "@seneca/maintain": "^0.1.0",
+    "@seneca/provider": "^3.1.0",
     "@types/node": "^25.2.3",
     "gubu": "^9.0.0",
     "prettier": "3.8.1",
@@ -51,11 +52,12 @@
   },
   "peerDependencies": {
     "@seneca/entity-util": ">=3",
+    "@seneca/env": ">=0.5",
+    "@seneca/provider": ">=3",
     "gubu": ">=9",
     "seneca": ">=3||>=4.0.0-rc2",
     "seneca-entity": ">=26",
-    "seneca-promisify": ">=3",
-    "@seneca/env": ">=0.5"
+    "seneca-promisify": ">=3"
   },
   "dependencies": {
     "stripe": "^20.3.1"
