chore: use a single tsconfig

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@seneca/stripe-provider",
   "version": "0.0.1",
   "main": "dist/StripeProvider.js",
-  "type": "commonjs",
+  "type": "module",
   "types": "dist/StripeProvider.d.ts",
   "description": "Seneca entity provider for the Stripe API.",
   "homepage": "https://github.com/senecajs/seneca-stripe-provider",
@@ -18,12 +18,12 @@
   },
   "scripts": {
     "prettier": "prettier --write .",
-    "test": "node --enable-source-maps --test \"dist-test/**/*.test.js\"",
-    "test-some": "node --enable-source-maps --test-name-pattern=\"$TEST_PATTERN\" --test \"dist-test/**/*.test.js\"",
-    "watch": "tsc --build src test -w",
-    "build": "tsc --build src test",
+    "test": "node --enable-source-maps --experimental-transform-types --test \"test/**/*.test.ts\"",
+    "test-some": "node --enable-source-maps --experimental-transform-types --test-name-pattern=\"$TEST_PATTERN\" --test \"test/**/*.test.ts\"",
+    "watch": "tsc --build -w",
+    "build": "tsc --build",
     "doc": "seneca-doc",
-    "clean": "rm -rf dist dist-test node_modules yarn.lock package-lock.json",
+    "clean": "rm -rf dist node_modules yarn.lock package-lock.json",
     "reset": "npm run clean && npm i && npm run build && npm test",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
     "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
